# testkraken

testkraken/: container_generator.py  workflowregtest.py
workflows4regtests/niflow-nfm-nfmkraken/: README.md
workflows4regtests/niflow-nfm-nfmkraken/package/: setup.cfg
workflows4regtests/niflow-nfm-nfmkraken/package/niflow/nfm/nfmkraken/: cli.py  workflow.py
workflows4regtests/niflow-nfm-nfmkraken/testkraken/: parameters.yaml
workflows4regtests/niflow-nfm-nfmkraken/testkraken/workflow/: script.sh
